2006-11-09  Tor Lillqvist  <tml@novell.com>

	* librsvg-zip.in: DLLs are always in "bin" nowadays, no need to
	ponder that in the script. Use pkg-config to find out
	gtk_binary_version to use it in the pathnames to the engine and
	loader DLLs.

2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>

	* configure.in: 2.16.1

2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-structure.c: Bug 361267 - SVGs with duplicate IDs cause Nautilus/eog to
	crash. Basically, a <use> used itself, causing infinite drawing recursion.
	
2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-gobject.c: Introduce PRIVATE API to get around bugs 357406 and 362217.
	IMHO, gobject's type registration and quark/error system is fundamentally 
	broken with respect to (un)loadable modules such as GTK+ theme engines. This 
	is the best I can do for now without breaking librsvg's API. This may cause
	as many headaches as it fixes, though.
	* rsvg-private.h: Declare new _rsvg_register_types() function
	* gtk-engine/svg-main.c: Invoke new type registration function
	* librsvg.def: export this function
	
2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: Use g_quark_from_string() because librsvg might be used
	in a plugin that gets unloaded
	
2006-10-13  Kouhei Sutou <kou@cozmixng.org>

	* rsvg-cairo-clip.c: Fix bug with scaling + clipping reported on
	cairo-devel.
	
2006-09-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* configure.in: Build the mozilla plugin using libxul in
	addition to mozilla and firefox.

2006-08-31  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.16.0
	
2006-08-23  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Bug 344116. The 5 crashes I mentioned before aren't 
	reproducible. I'm enabling this code, and watching out for regressions.
	
2006-08-23  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Hopefully fix --disable-gtk-doc (341421)
	* doc/Makefile.am: Ditto
	
2006-08-23  Dom Lachowicz <cinamod@hotmail.com>
